Add image into splash image div

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
     <div class="wrapper">
         <div class="splash-image">
-            SPLASH
+            <img src="img/sign-up-bg.jpg" alt="Sign-up background">
+
         </div>
         <div class="main">
             <div class="intro-text">Sample Text</div>
