Add logo on top of splash image

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="wrapper">
         <div class="splash-image">
             <img src="img/sign-up-bg.jpg" alt="Sign-up background">
-
+            <div class="logo">Join Us!</div>
         </div>
         <div class="main">
             <div class="intro-text">Sample Text</div>
