--- a/index.html
+++ b/index.html
@@ -14,8 +14,36 @@
             <div class="logo">Join Us!</div>
         </div>
         <div class="main">
-            <div class="intro-text">Sample Text</div>
-            <div class="sign-up-form"></div>
+            <div class="intro-text">This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started.</div>
+            <div class="sign-up-form">
+                <div class="hype-text">Let's do this!</div>
+                <form>
+                    <div class="form-first-name">
+                        <label for="first-name">FIRST NAME</label>
+                        <input type="text" name="firstName" id="first-name">
+                    </div>
+                    <div class="form-last-name">
+                        <label for="last-name">LAST NAME</label>
+                        <input type="text" name="lastName" id="last-name">
+                    </div>
+                    <div class="form-email">
+                        <label for="email">EMAIL</label>
+                        <input type="email" name="email" id="email">
+                    </div>
+                    <div class="form-birthdate">
+                        <label for="birthdate">BIRTH DATE</label>
+                        <input type="date" name="birthdate" id="birthdate">
+                    </div>
+                    <div class="form-password">
+                        <label for="password">PASSWORD</label>
+                        <input type="password" name="password" id="password">
+                    </div>
+                    <div class="form-password-confirm">
+                        <label for="password-confirm">CONFIRM PASSWORD</label>
+                        <input type="password" name="passwordConfirm" id="password-confirm">
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
 </body>
