Add submit button

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
                         <label for="password-confirm">CONFIRM PASSWORD</label>
                         <input type="password" name="passwordConfirm" id="password-confirm">
                     </div>
+                    <div class="form-submit">
+                        <input type="submit" id="submit" value="Submit">
+                    </div>
                 </form>
             </div>
         </div>
