Add log-in prompt for already registered users

--- a/index.html
+++ b/index.html
@@ -45,7 +45,11 @@
                         <input type="submit" id="submit" value="Submit">
                     </p>
                 </form>
+                <div class="log-in">
+                    <p>Already have an account? <a href="index.html">Log in</a></p>
+                </div>
             </div>
+
         </div>
     </div>
 </body>
