Add required attribute to form elements

--- a/index.html
+++ b/index.html
@@ -19,27 +19,27 @@
                 <form>
                     <p class="form-first-name">
                         <label for="first-name">FIRST NAME</label>
-                        <input type="text" name="firstName" id="first-name">
+                        <input type="text" name="firstName" id="first-name" required>
                     </p>
                     <p class="form-last-name">
                         <label for="last-name">LAST NAME</label>
-                        <input type="text" name="lastName" id="last-name">
+                        <input type="text" name="lastName" id="last-name" required>
                     </p>
                     <p class="form-email">
                         <label for="email">EMAIL</label>
-                        <input type="email" name="email" id="email">
+                        <input type="email" name="email" id="email" required>
                     </p>
                     <p class="form-birthdate">
                         <label for="birthdate">BIRTH DATE</label>
-                        <input type="date" name="birthdate" id="birthdate">
+                        <input type="date" name="birthdate" id="birthdate" required>
                     </p>
                     <p class="form-password">
                         <label for="password">PASSWORD</label>
-                        <input type="password" name="password" id="password">
+                        <input type="password" name="password" id="password" required>
                     </p>
                     <p class="form-password-confirm">
                         <label for="password-confirm">CONFIRM PASSWORD</label>
-                        <input type="password" name="passwordConfirm" id="password-confirm">
+                        <input type="password" name="passwordConfirm" id="password-confirm" required>
                     </p>
                     <p class="form-submit">
                         <input type="submit" id="submit" value="Submit">
