--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
                 <form>
                     <p class="form-first-name">
                         <label for="first-name">FIRST NAME</label>
-                        <input type="text" name="firstName" id="first-name" required>
+                        <input type="text" name="firstName" id="first-name" placeholder="John" required>
                     </p>
                     <p class="form-last-name">
                         <label for="last-name">LAST NAME</label>
-                        <input type="text" name="lastName" id="last-name" required>
+                        <input type="text" name="lastName" id="last-name" placeholder="Smith" minlength="3" required>
                     </p>
                     <p class="form-email">
                         <label for="email">EMAIL</label>
-                        <input type="email" name="email" id="email" required>
+                        <input type="email" name="email" id="email" placeholder="john@example.com" required>
                     </p>
                     <p class="form-birthdate">
                         <label for="birthdate">BIRTH DATE</label>
